--- a/css/print.css
+++ b/css/print.css
@@ -1,7 +1,6 @@
 @page {
-	size: A4 landscape;
-	max-height:100%;
-	max-width:100%
+    size: A4 landscape;
+    margin: 0.5cm;
 }
 
 .header,
